Fix token mapping for sl-spacing-large

--- a/src/styles/exports/overrides.css
+++ b/src/styles/exports/overrides.css
@@ -32,7 +32,6 @@
   --sl-shadow-x-large: var(--ts-shadow-x-large);
 
   /* Spacing */
-  --sl-spacing-large: var(--ts-spacing-large);
   --sl-spacing-2x-large: var(--ts-spacing-2x-large);
   --sl-spacing-4x-large: var(--ts-spacing-4x-large);
 
